--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 #game {
     border: 2px solid gray;
 }
+
+h2 {
+    font-family: 'Press Start 2P', cursive;   
+}
+
+p {
+    font-family: 'Press Start 2P', cursive;
+}
